--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<title>Gerasimof.</title>
+	<style>
+		@font-face {
+		    font-family: 'Gilroy';
+		    src: local('Gilroy Light'), local('Gilroy-Light'), url('Gilroylight.woff2') format('woff2'), url('Gilroylight.woff') format('woff'), url('Gilroylight.ttf') format('truetype');
+		    font-weight: 300;
+		    font-style: normal;
+		}
+		@font-face {
+		    font-family: 'Gilroy';
+		    src: local('Gilroy ExtraBold'), local('Gilroy-ExtraBold'), url('Gilroyextrabold.woff2') format('woff2'), url('Gilroyextrabold.woff') format('woff'), url('Gilroyextrabold.ttf') format('truetype');
+		    font-weight: 800;
+		    font-style: normal;
+		}
+		body {;
+			font-family: Gilroy, Arial, Helvetica, sans-serif;
+			font-weight: 300;
+			color: #fafafa;
+			background: #fafafa;
+			text-shadow: -2px -2px 2px #eee, 2px 2px 2px #888;
+
+		}
+		h1  {
+			font-size: 5em;
+			margin: auto;
+			font-weight: 900;
+		}
+
+		h2 {
+			font-size: 2em;
+			font-weight: 300;
+			margin: auto;
+		}
+		.hero {
+			min-width: 100%;
+		}
+		.HELLO {
+			width: 100%;
+			margin: auto;
+			text-align: center;
+			margin-top: 30vh;
+		}
+		a {
+			background: blue;
+			color: white;
+			border: none;
+			border-radius: 50vh;
+			padding: 10px 15px;
+			transition: 0.2s ease-in-out;
+			text-decoration: none;
+			margin-top: 20px;
+			display: inline-block;
+			box-shadow: 0px 7px 14px rgba(0, 0, 255, 0.5);
+		}
+		a:hover {
+			box-shadow: none;
+		}
+		.signature {
+			position: absolute;
+			bottom: 5px;
+			font-weight: 300;
+			right: 10px;
+		}
+		.love {
+			color: red;
+			font-size: 1em
+		}
+		.line {
+			display: inline-block;
+			width:20em;
+		}
+		@media (max-width:360px):
+		}
+
+	</style>
+</head>
+<body>
+	<section class="hero">
+		<div class="HELLO">
+			<span style=""><h1 class="logo">Gerasimof.</h1></span>
+			<hr class="line">
+			<span><h2>design | code | AR | VR</h2></span>
+			<a href="https://t.me/igerodot">send message</a>
+			<p class="signature">Crafted with <span class="love">♥︎</span> in Moscow</p>
+		</div>
+	</section>
+	<div class="design"></div>
+	<div class="code"></div>
+	<div class="vr"></div>
+	<div class="ar"></div>
+</body>
+</html>
