--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 		body {;
 			font-family: Gilroy, Arial, Helvetica, sans-serif;
 			font-weight: 300;
-			color: #fafafa;
 			background: #fafafa;
 			text-shadow: -2px -2px 2px #eee, 2px 2px 2px #888;
-
+			color: #333
 		}
 		h1  {
 			font-size: 5em;
