--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			font-weight: 300;
 			background: #fafafa;
 			text-shadow: -2px -2px 2px #eee, 2px 2px 2px #888;
-			color: #333
+			color: #b6b6b6
 		}
 		h1  {
 			font-size: 5em;
