--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			font-family: Gilroy, Arial, Helvetica, sans-serif;
 			font-weight: 300;
 			background: #fafafa;
-			text-shadow: -2px -2px 2px #eee, 2px 2px 2px #888;
-			color: #b6b6b6
+			color: #5b5b5b
 		}
 		h1  {
 			font-size: 5em;
