--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
 				margin: auto;
 			}
 
-			.container {
-				max-width: 820px;
-				margin: auto;
-			}
-
 			.hero {
 				min-width: 100%;
 			}
@@ -71,10 +66,10 @@
 				box-shadow: none;
 			}
 			.signature {
-				position: absolute;
-				bottom: 5px;
+				padding-top: 50px;
+				text-align: right;
 				font-weight: 300;
-				right: 10px;
+				margin-left: auto;
 			}
 			.love {
 				color: red;
@@ -87,6 +82,18 @@
 			.padding {
 				padding: 20px;
 			}
+			.myGit {
+				box-shadow: 0 7px 50px 0 rgba(187, 187, 187, 0.2);
+				border-radius: 17px;
+				margin-top: 30px;
+				max-width: 900px;
+				margin: 50px auto;
+				padding: 20px;
+			}
+
+			svg {
+				max-width: 100%;
+			}
 		</style>
 	</head>
 	<body>
@@ -97,50 +104,49 @@
 					<hr class="line" />
 					<span><h2>design | code | AR | VR</h2></span>
 					<a href="https://t.me/igerodot">send message</a>
-					<p class="signature">
-						Crafted with <span class="love">♥︎</span> in Moscow
-					</p>
 				</div>
 			</section>
 
-			<section>
-				<div class="padding">
-					<!-- Include the library. -->
-					<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+			<section class="myGit">
+				<!-- Include the library. -->
+				<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
-					<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-					<link
-						rel="stylesheet"
-						href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
-					/>
+				<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+				<link
+					rel="stylesheet"
+					href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+				/>
 
-					<style>
-						.calendar,
-						.contrib-column {
-							border: none;
-						}
-					</style>
+				<style>
+					.calendar,
+					.contrib-column {
+						border: none;
+					}
+				</style>
 
-					<!-- Prepare a container for your calendar. -->
-					<div class="calendar">
-						<!-- Loading stuff -->
-						Loading the data just for you.
-					</div>
-
-					<script>
-						GitHubCalendar(".calendar", "gerodot");
-
-						// or enable responsive functionality:
-						GitHubCalendar(".calendar", "gerodot", { responsive: true });
-
-						// Use a proxy
-						GitHubCalendar(".calendar", "gerodot", {
-							proxy(username) {
-								return fetch(`https://your-proxy.com/github?user=${username}`);
-							},
-						}).then((r) => r.text());
-					</script>
+				<!-- Prepare a container for your calendar. -->
+				<div class="calendar">
+					<!-- Loading stuff -->
+					Loading the data just for you.
 				</div>
+
+				<script>
+					GitHubCalendar(".calendar", "gerodot");
+
+					// or enable responsive functionality:
+					GitHubCalendar(".calendar", "gerodot", { responsive: true });
+
+					// Use a proxy
+					GitHubCalendar(".calendar", "gerodot", {
+						proxy(username) {
+							return fetch(`https://your-proxy.com/github?user=${username}`);
+						},
+					}).then((r) => r.text());
+				</script>
+			</section>
+
+			<section class="signature">
+				<p class="">Crafted with <span class="love">♥︎</span> in Moscow</p>
 			</section>
 		</div>
 		<div class="design"></div>
