--- a/index.html
+++ b/index.html
@@ -91,9 +91,6 @@
 				padding: 20px;
 			}
 
-			svg {
-				max-width: 100%;
-			}
 		</style>
 	</head>
 	<body>
@@ -107,7 +104,8 @@
 				</div>
 			</section>
 
-			<section class="myGit">
+			
+			<a class="myGit" href="github.con/gerodot">
 				<!-- Include the library. -->
 				<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
@@ -143,10 +141,10 @@
 					//	},
 					// }).then((r) => r.text());
 				</script>
-			</section>
+			</a>
 
 			<section class="signature">
-				<p class="">Crafted with <span class="love">♥︎</span> in Moscow</p>
+				<p class="">Crafted with <span class="love">♥︎</span> in SPb</p>
 			</section>
 		</div>
 		<div class="design"></div>
