--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
 				margin: 50px auto;
 				padding: 20px;
 			}
-
 		</style>
 	</head>
 	<body>
@@ -104,7 +103,6 @@
 				</div>
 			</section>
 
-			
 			<a class="myGit" href="github.con/gerodot">
 				<!-- Include the library. -->
 				<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
@@ -147,9 +145,9 @@
 				<p class="">Crafted with <span class="love">♥︎</span> in SPb</p>
 			</section>
 		</div>
-		<div class="design"></div>
+		<!--<div class="design"></div>
 		<div class="code"></div>
 		<div class="vr"></div>
-		<div class="ar"></div>
+		<div class="ar"></div>-->
 	</body>
 </html>
