--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 			}
 		</style>
 	</head>
+	
 	<body>
 		<div class="container">
 			<section class="hero">
@@ -103,7 +104,7 @@
 				</div>
 			</section>
 
-			<a class="myGit" href="github.con/gerodot">
+			<section class="myGit" href="github.con/gerodot">
 				<!-- Include the library. -->
 				<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
@@ -139,7 +140,7 @@
 					//	},
 					// }).then((r) => r.text());
 				</script>
-			</a>
+			</section>
 
 			<section class="signature">
 				<p class="">Crafted with <span class="love">♥︎</span> in SPb</p>
