--- a/index.html
+++ b/index.html
@@ -90,10 +90,6 @@
 				margin: 50px auto;
 				padding: 20px;
 			}
-			.calendar,
-			.contrib-column {
-				border: none;
-			}
 		</style>
 	</head>
 	
@@ -117,7 +113,12 @@
 					rel="stylesheet"
 					href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
 				/>
-
+				<style> 
+					.calendar,
+					.contrib-column {
+						border: none;
+					}
+				</style>
 				<!-- Prepare a container for your calendar. -->
 				<div class="calendar">
 					<!-- Loading stuff -->
